tests/testfiles/valid/arithmetics/addition_division.c
int main() {
    int a = 1; 
    int b = 2;
    int c = 4; 
    int d = 8; 
    int result;
    result = ((a + b) * (c - d)) + (c * d) - ((a + c) / (b - d));
    return result;
}
