tests/testfiles/invalid/basic/invalid_variable_assignment.c
int main() {
    int d;
    d = "texte" + "texte";
    return d;
}